[package]
name = "rustybalance"
version = "0.1.0"
authors = ["Eduard Gevorkyan <egevorkyan@outlook.com>"]
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.3", features = ["derive", "wrap_help"] }
httparse = "1.8.0"
http = "0.2.8"
log = "0.4.17"
env_logger = "0.10.0"
pretty_env_logger = "0.4.0"
threadpool = "1.8.1"
tokio = { version = "0.3.7", features = ["full"] }
rand = "0.8.5"
parking_lot = "0.12.1"


[dev-dependencies]
nix = "0.26.1"
hyper = "1.0.0-rc.2"
reqwest = "0.11.13"
async-trait = "0.1.61"
